tests/pass/10_variadic.zn
foreign u0 printf(*char, ...)

i32 main() {

    printf("%s: %d\n", "ciao", 1)
    return 0
}
