tests/fail/05_duplicate_static_method.zn
foreign u0 printf(*char)

struct Greeter {
    f32 p
}

u0 Greeter::say() {
    printf("Hi\n")
}

u0 Greeter::say() {
    printf("Hi 2")
}

i32 main() {
    Greeter::say()
    Greeter::unkown()
    
    return 0
}
